fixed another spacing issue

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -178,13 +178,14 @@ a:hover {
   width: 100%;
   align-items: center;
   border-left: 1px solid var(--bs-grey-5);
+  padding: 0;
 }
 
 .global-header-right {
   display: flex;
   align-items: center;
   gap: 0.5rem;
-  margin: 0 1rem;
+  margin: 0 0.5rem;
 }
 
 #global-nav-toggle {
@@ -208,7 +209,6 @@ a:hover {
 .search-icon {
   width: 23px;
   height: 23px;
-  margin-right: 1rem;
 }
 
 /* Image and banner styles */
@@ -253,12 +253,15 @@ a:hover {
 }
 
 /* Lower Nav Styles */
+.nav-links {
+  background-color: var(--bs-black);
+}
 .nav-links ul {
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
-  padding: 0;
-  background-color: var(--bs-black);
+  gap: 1rem;
+  max-width: 700px;
+  margin: 0 auto;
   padding: 1rem 2rem;
 }
 
@@ -272,7 +275,6 @@ a:hover {
 
 .nav-links ul li {
   list-style: none;
-  max-width: 500px;
 }
 
 /* Main Styles */
